[tool.poetry]
name = "discord-bots"
version = "0.1.0"
description = ""
authors = ["Kat Schlorff <kat.schlorff@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ics = "^0.7.2"
requests = "^2.32.3"
discord = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
